# music-analysis-system

./: .env.dev  .env.example  .gitignore  .todo.txt  Dockerfile  README.md  current_ctructure.txt  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  data.py  debug.py  spotify.py  spotify_auth_provider.py  tracks.py  users.py
app/clients/: spotify.py
app/constants/: routes.py  spotify.py
app/core/: security.py
app/crud/: album_crud.py  artist_crud.py  listening_event_crud.py  playlist_crud.py  track_crud.py  user_crud.py
app/db/: database.py
app/domain/music/: factory.py
app/models/: __init__.py  album.py  artist.py  genre_preference.py  listening_event.py  playlist.py  social_account.py  track.py  user.py
app/repositories/: album.py  artist.py  listening_event.py  track.py  user.py
app/schemas/: album.py  artist.py  genre_preference.py  listening_event.py  playlist.py  social_account.py  token.py  track.py  user.py
app/services/: .spotify_service.py  auth_service.py  data_service.py  spotify.py  spotify_ingestion_service.py  user_service.py
scripts/: create_test_db.py  debug_imports.py  setup_db.py  validate_env.py
tests/: conftest.py  test_env_debug.py
tests/api/: test_deps.py
tests/api/routes/: test_auth_provider.py  test_data.py  test_spotify_auth_provider.py  test_tracks.py  test_users.py
tests/crud/: test_album_crud.py  test_artist_crud.py  test_track_crud.py
tests/services/: test_data_service.py  test_spotify.py
(+4 files in other folders)
